Resources/IAC-DNS/infrastructure/projects/threat-dragon/namespace.yaml
# Threat Dragon Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: threat-dragon
  labels:
    app.kubernetes.io/name: threat-dragon
    app.kubernetes.io/component: threat-modeling
