Resources/IAC-DNS/infrastructure/projects/threat-dragon/service.yaml
# Threat Dragon Service
apiVersion: v1
kind: Service
metadata:
  name: threat-dragon
  namespace: threat-dragon
  labels:
    app.kubernetes.io/name: threat-dragon
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: threat-dragon
