Resources/IAC-DNS/infrastructure/projects/threat-dragon/ingressroute.yaml
# Threat Dragon IngressRoute
# Access via: https://threatdragon.knowledgeondemand.net
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: threat-dragon
  namespace: threat-dragon
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`threatdragon.knowledgeondemand.net`)
      kind: Rule
      services:
        - name: threat-dragon
          port: 80
      middlewares:
        - name: basic-auth
          namespace: traefik
        - name: secure-headers
          namespace: traefik
  tls:
    secretName: threat-dragon-tls
